--- a/about.html
+++ b/about.html
@@ -17,13 +17,14 @@
                 <li class="nav" ><a href="about.html" id="about"><i class="fa fa-user"></i></a></li>
                 <li class="nav" ><a href="skills.html" id="skills"><i class="fa fa-cogs"></i></a></li>
                 <li class="nav" ><a href="work.html" id="work"><i class="fa fa-briefcase"></i></a></li>
-                <li class="nav" ><a href="certs.html" id="certificate"><i class="fa fa-certificate"></i></a></li>
-                <li class="nav"><a href="mailto:estheribeh68@gmail.com" id="contactme"><i class="fa fa-envelope"></i></a></li>
+                
+                
             </ul>
             <div class="">
                 <ul class="social-icon" >
+                    <li class="social"><a href="mailto:estheribeh68@gmail.com" id="contactme"><i class="fa fa-envelope"></i></a></li>
                     <li class="social"><a href="http://twitter.com"><i class="fa fa-twitter"></i></a></li>
-                    <li class="social"><a href="/"></a><i class="fa fa-linkedin"></i></li>
+                    <li class="social"><a href="https://www.linkedin.com/in/esther-ibeh-2849371b5"><i class="fa fa-linkedin"></i></a></li>
                     <li class="social"><a href="https://github.com/Esther-art-web/"><i class="fa fa-github"></i></a></li>
                 </ul>
             </div>
